--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>{{ name }}'s Watchlist</title>
+    <img alt="Photo" class='Photo' src="{{ url_for('static', filename='images/photo.png') }}">
+    {{ name }}'s Watchlist
+    <link rel="icon" href="{{ url_for('static', filename='photo.png') }}">
+    <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}"type="text/css">
 </head>
 <body>
     <h2>{{ name }}'s Watchlist</h2>
     {# 使用 length 过滤器获取 movies 变量的长度 #}
     <p>{{ movies|length }} Titles</p>
-    <ul>
+    <ul class="movie-list">
         {% for movie in movies %}  {# 迭代 movies 变量 #}
         <li>{{ movie.title }} - {{ movie.year }}</li>  {# 等同于 movie['title'] #}
         {% endfor %}  {# 使用 endfor 标签结束 for 语句 #}
